--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,10 +1,12 @@
 body {
     margin: 0;
+    font-family: Trebuchet MS, sans-serif;
 }
 .container1{
     background-image: url(@/assets/black-trianglify-b6181ec2.jpg);
     background-size: cover;
     background-position: center;
-    width: 100%;
-    height: 100vh;
+    display: flex;
+    justify-content: space-around;
+    height: 1200px;
 }
